--- a/slides/00-setup.qmd
+++ b/slides/00-setup.qmd
@@ -22,7 +22,7 @@ This work is licensed under [Creative Commons Zero v1.0 Universal](https://creat
 **Daniel D. Sjoberg**
 
 ![](images/dan-circle.png){width="70%"}
-
+![](images/genentech-logo.png){width="70%"}
 :::
 ::: {.column width="50%"}
 **Mark Baillie**
