--- a/slides/00-setup.qmd
+++ b/slides/00-setup.qmd
@@ -15,14 +15,14 @@ fa_fill <- "#606060"
 This work is licensed under [Creative Commons Zero v1.0 Universal](https://creativecommons.org/publicdomain/zero/1.0/).
 
 
-## Presenters
+## Authors
 
 ::: columns
 ::: {.column width="50%"}
 **Daniel D. Sjoberg**
 
 ![](images/dan-circle.png){width="70%"}
-![](images/genentech-logo.png){width="70%"}
+![](images/genentech-logo.png){width="50%"}
 :::
 ::: {.column width="50%"}
 **Mark Baillie**
