added novartis logo

--- a/slides/00-setup.qmd
+++ b/slides/00-setup.qmd
@@ -32,6 +32,8 @@ This work is licensed under [Creative Commons Zero v1.0 Universal](https://creat
 **Mark Baillie**
 
 ![](images/mark-circle.png){width="70%"}
+
+![](images/novartis-logo.png){width="50%"}
 :::
 :::
 :::
