--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ editor:
 
 🏨 Roche Campus, Grenzacherstrasse 124, 4070 Basel, Switzerland
 
-💥 [Conference Registration](https://user-regional-2023.gitlab.io/basel/)
+💥 [Conference Registration](https://user-regional-2023.gitlab.io/basel/) through July 14th, or until 
 
 ------------------------------------------------------------------------
 
@@ -34,7 +34,7 @@ install.packages('ggsurvfit')
 
 ![](images/dan-circle.png){style="float:left;padding: 0 10px 0 0;" fig-alt="Headshot of Daniel Sjoberg" width="150"}
 
-[**Daniel D. Sjoberg**](https://www.danieldsjoberg.com/) (he/him) is a Software Engineer and Genentech. Previously, he was a Lead Data Science Manager at the Prosate Cancer Clinical Trials Consortium, and a Senior Biostatistician at Memorial Sloan Kettering Cancer Center in New York City.
+[**Daniel D. Sjoberg**](https://www.danieldsjoberg.com/) (he/him) is a Software Engineer at Genentech. Previously, he was a Lead Data Science Manager at the Prosate Cancer Clinical Trials Consortium, and a Senior Biostatistician at Memorial Sloan Kettering Cancer Center in New York City.
 He enjoys R package development, creating many packages available on [CRAN](https://cran.r-project.org/web/packages/), [R-Universe](https://ddsjoberg.r-universe.dev/ui#packages), and [GitHub](https://github.com/ddsjoberg). 
 His research interests include adaptive methods in clinical trials, precision medicine, and predictive modeling.
 Daniel is the winner of the 2021 American Statistical Association (ASA) Innovation in Statistical Programming and Analytics award.
