--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -17,5 +17,14 @@ execute:
 cache: true
 ---
 
-{{< include 00-setup.qmd >}}
+```{r}
+#| echo: false
+
+list(`as_gt-lst:addl_cmds` = list(tab_spanner = rlang::expr(gt::tab_options(table.font.size = 33)))) |> 
+  gtsummary::set_gtsummary_theme()
+```
+
+<!-- {{< include 00-setup.qmd >}} -->
+
+{{< include 01-overview.qmd >}}
 
