--- a/index.qmd
+++ b/index.qmd
@@ -13,7 +13,7 @@ editor:
 
 🏨 Roche Campus, Grenzacherstrasse 124, 4070 Basel, Switzerland
 
-💥 [Conference Registration](https://user-regional-2023.gitlab.io/basel/) through July 14th, or until 
+💥 [Conference Registration](https://user-regional-2023.gitlab.io/basel/) through July 14th or until event sells out
 
 ------------------------------------------------------------------------
 
