--- a/slides/01-overview.qmd
+++ b/slides/01-overview.qmd
@@ -63,7 +63,7 @@ survfit2(Surv(time, status) ~ surg, data = df_colon) |>
 
   
 * The Could-Be-Better
-  - y-axis label is incorrect, and the range of axis is best 0-100%
+  - y-axis label is incorrect, and the range of axis is best at 0-100%
   - Axis padding a bit more than I prefer for a Kaplan-Meier figure
   - x-axis typically has more tick marks for Kaplan-Meier figure
 
@@ -77,6 +77,7 @@ survfit2(Surv(time, status) ~ surg, data = df_colon) |>
 ::: columns
 ::: {.column width="80%"}
 ```{r}
+#| code-line-numbers: "4-5"
 survfit2(Surv(time, status) ~ surg, data = df_colon) |> 
   ggsurvfit() +
   add_risktable() +
@@ -106,6 +107,7 @@ survfit2(Surv(time, status) ~ surg, data = df_colon) |>
 ::: columns
 ::: {.column width="80%"}
 ```{r}
+#| code-line-numbers: "6"
 survfit2(Surv(time, status) ~ surg, data = df_colon) |> 
   ggsurvfit() +
   add_risktable() +
