WIP: drafts slides

--- a/slides/00-setup.qmd
+++ b/slides/00-setup.qmd
@@ -3,10 +3,13 @@
 ```{r}
 #| echo: false
 #| cache: false
+library(ggsurvfit)
+library(survival)
 library(tidyverse)
 # fill for font awesome icons
 fa_fill <- "#606060"
 ```
+
 
 ## Licensing
 
