WIP: draft slides

--- a/slides/03-cdisc.qmd
+++ b/slides/03-cdisc.qmd
@@ -1,4 +1,6 @@
-# Surv_CNSR()
+# CDISC
+
+Surv_CNSR()
 
 <!-- Lastly, the package includes gems for those using the CDISC ADaM ADTTE data model. The “PARAM” value is used to construct enhanced labels in the figure. The event indicator, “CNSR”, is coded in the opposite way the {survival} package expects. This difference creates an opportunity for errors to be silently introduced in an analysis. The {ggsurvfit} package exports a function called Surv_CNSR() to resolve this concern by creating a survival object that uses ADTTE coding conventions as the default. The function can be used in {ggsurvfit} as well as any other package with a survival endpoint. -->
 
