--- a/slides/ggsurvfit-examples.qmd
+++ b/slides/ggsurvfit-examples.qmd
@@ -2,6 +2,12 @@
 
 # Default and styled modifications with ggplot2
 
+```{r}
+#| echo: false
+#| message: false
+library(ggsurvfit)
+```
+
 ## {ggsurvfit} defaults 
 
 ```{r}
